[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/pngegg.png" type="Texture" id=1]
[ext_resource path="res://sprites/CANHÂO.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Canhão.gd" type="Script" id=4]
[ext_resource path="res://sprites/kisspng-blue-sky-area-font-beach-ocean-5a868dc26a8537.3325894115187675544363.png" type="Texture" id=5]
[ext_resource path="res://Vidas.gd" type="Script" id=6]
[ext_resource path="res://sprites/coracoes.png" type="Texture" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends KinematicBody2D
onready var vidas = $Vidas.visible
func _ready():
	pass # Replace with function body.


func _on_Button_pressed():
	hide()
"

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cannon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 30.0, -30.0, 30.0 ]
}

[node name="NavioP1" type="KinematicBody2D"]
script = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 1279.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 640.337, 360.204 )
scale = Vector2( 0.441259, 0.717959 )
texture = ExtResource( 5 )

[node name="Canhão" type="Area2D" parent="."]
position = Vector2( 0, 16.9897 )
script = ExtResource( 4 )

[node name="Cannon" type="Sprite" parent="Canhão"]
position = Vector2( 115.422, 422.726 )
rotation = -0.423657
scale = Vector2( 0.112701, 0.112949 )
texture = ExtResource( 3 )
offset = Vector2( 15, -200 )

[node name="Corpocannon" type="CollisionShape2D" parent="Canhão"]
position = Vector2( 120.322, 426.674 )
shape = SubResource( 2 )

[node name="angulo" type="AnimationPlayer" parent="Canhão"]
anims/3 = SubResource( 3 )

[node name="Navio" type="Sprite" parent="."]
position = Vector2( 104.78, 451.258 )
scale = Vector2( 0.250097, 0.240544 )
texture = ExtResource( 1 )

[node name="Navio1" type="CollisionPolygon2D" parent="."]
position = Vector2( -22.475, -100 )
polygon = PoolVector2Array( 26.7552, 522.339, 49.2059, 560.523, 68.6513, 540.724, 55.0395, 534.713, 57.6911, 529.41 )

[node name="Navio2" type="CollisionPolygon2D" parent="."]
position = Vector2( -22.475, -100 )
polygon = PoolVector2Array( 68.6454, 540.473, 125.886, 568.091, 125.663, 596.377, 125.886, 597.936, 70.6499, 596.822, 49.4911, 560.295 )

[node name="Navio3" type="CollisionPolygon2D" parent="."]
position = Vector2( -22.475, -100 )
polygon = PoolVector2Array( 183.176, 541.957, 202.467, 564.806, 226.814, 522.666, 197.784, 529.971, 199.47, 535.402 )

[node name="Navio4" type="CollisionPolygon2D" parent="."]
position = Vector2( -22.475, -100 )
polygon = PoolVector2Array( 182.801, 541.957, 126.615, 568.552, 125.678, 598.331, 181.678, 597.956, 202.467, 564.432 )

[node name="Navio5" type="CollisionPolygon2D" parent="."]
position = Vector2( -22.475, -100 )
polygon = PoolVector2Array( 122.682, 503.937, 91.7791, 550.385, 126.053, 567.428, 160.701, 551.883 )

[node name="Vidas" type="Sprite" parent="."]
script = ExtResource( 6 )

[node name="coracoes" type="Sprite" parent="Vidas"]
position = Vector2( 40.4957, 70.1263 )
scale = Vector2( 0.166923, 0.166923 )
texture = ExtResource( 7 )

[node name="coracoes2" type="Sprite" parent="Vidas"]
position = Vector2( 118.983, 70.7209 )
scale = Vector2( 0.166923, 0.166923 )
texture = ExtResource( 7 )

[node name="coracoes3" type="Sprite" parent="Vidas"]
position = Vector2( 197.471, 71.9101 )
scale = Vector2( 0.166923, 0.166923 )
texture = ExtResource( 7 )

[node name="coracoes4" type="Sprite" parent="Vidas"]
position = Vector2( 276.553, 71.9101 )
scale = Vector2( 0.166923, 0.166923 )
texture = ExtResource( 7 )

[node name="coracoes5" type="Sprite" parent="Vidas"]
position = Vector2( 356.23, 71.9101 )
scale = Vector2( 0.166923, 0.166923 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="Vidas" method="_on_Button_pressed"]
